<resources>
    <string name="app_name">CS2340C_Team51</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="select">Select</string>
    <string name="select_2">Select 2</string>
    <string name="select_3">Select 3</string>
    <string name="background">background</string>
    <string name="next">Next</string>
    <string name="please_insert_name">Please Insert Name</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Difficulty">3</string>
    <string name="End">3</string>
    <string name="name">NAME:</string>
</resources>

